@@ -22,8 +22,6 @@ import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
-
 import org.apache.jena.atlas.iterator.Iter;
 import org.apache.jena.atlas.json.JsonArray;
 import org.apache.jena.atlas.json.JsonObject;
@@ -53,6 +51,7 @@ import org.apache.jena.sparql.engine.QueryIterator;
 import org.apache.jena.sparql.engine.binding.Binding;
 import org.apache.jena.sparql.engine.binding.BindingFactory;
 import org.apache.jena.sparql.engine.iterator.QueryIteratorWrapper;
+import org.apache.jena.sparql.engine.Timeouts.Timeout;
 import org.apache.jena.sparql.graph.GraphOps;
 import org.apache.jena.sparql.modify.TemplateLib;
 import org.apache.jena.sparql.syntax.ElementGroup;
@@ -89,10 +88,17 @@ public class QueryExecDataset implements QueryExec
     private long                     timeout2         = TIMEOUT_UNSET;
     private final AlarmClock         alarmClock       = AlarmClock.get();
     private long                     queryStartTime   = -1; // Unset
+    private AtomicBoolean            cancelSignal;
+
+    @Deprecated
+    protected QueryExecDataset(Query query, String queryString, DatasetGraph datasetGraph, Context cxt,
+            QueryEngineFactory qeFactory, long timeout1, TimeUnit timeUnit1, long timeout2, TimeUnit timeUnit2,
+            Binding initialToEngine) {
+        this(query, queryString, datasetGraph, cxt, qeFactory, new Timeout(timeout1, timeUnit1, timeout2, timeUnit2), initialToEngine);
+    }
 
     protected QueryExecDataset(Query query, String queryString, DatasetGraph datasetGraph, Context cxt,
-                               QueryEngineFactory qeFactory,
-                               long timeout1, TimeUnit timeUnit1, long timeout2, TimeUnit timeUnit2,
+                               QueryEngineFactory qeFactory, Timeout timeout,
                                Binding initialToEngine) {
         // Context cxt is already a safe copy.
         this.query = query;
@@ -100,10 +106,14 @@ public class QueryExecDataset implements QueryExec
         this.dataset = datasetGraph;
         this.qeFactory = qeFactory;
         this.context = (cxt == null) ? Context.setupContextForDataset(cxt, datasetGraph) : cxt;
-        this.timeout1 = asMillis(timeout1, timeUnit1);
-        this.timeout2 = asMillis(timeout2, timeUnit2);
+        this.timeout1 = timeout.initialTimeoutMillis();
+        this.timeout2 = timeout.overallTimeoutMillis();
         // See also query substitution handled in QueryExecBuilder
         this.initialBinding = initialToEngine;
+
+        // Cancel signal may originate from e.g. an update execution.
+        this.cancelSignal = Context.getOrSetCancelSignal(context);
+
         init();
     }
 
@@ -111,10 +121,6 @@ public class QueryExecDataset implements QueryExec
         Context.setCurrentDateTime(context);
         if ( query != null )
             context.put(ARQConstants.sysCurrentQuery, query);
-    }
-
-    private static long asMillis(long duration, TimeUnit timeUnit) {
-        return (duration < 0) ? duration : timeUnit.toMillis(duration);
     }
 
     @Override
@@ -142,6 +148,7 @@ public class QueryExecDataset implements QueryExec
 
     @Override
     public void abort() {
+        cancelSignal.set(true);
         synchronized (lockTimeout) {
             // This is called asynchronously to the execution.
             // synchronized is for coordination with other calls of
@@ -166,11 +173,9 @@ public class QueryExecDataset implements QueryExec
     }
 
     private RowSet execute() {
-        execInit();
         startQueryIterator();
-        Iterator<Binding> iter = queryIterator;
-        List<Var> vars = query.getResultVars().stream().map(Var::alloc).collect(Collectors.toList());
-        return RowSetStream.create(vars, iter);
+        List<Var> vars = query.getResultVars().stream().map(Var::alloc).toList();
+        return RowSetStream.create(vars, queryIterator);
     }
 
     // -- Construct
@@ -357,12 +362,6 @@ public class QueryExecDataset implements QueryExec
     }
 
     class TimeoutCallback implements Runnable {
-        private final AtomicBoolean cancelSignal;
-
-        public TimeoutCallback(AtomicBoolean cancelSignal) {
-            this.cancelSignal = cancelSignal;
-        }
-
         @Override
         public void run() {
             synchronized (lockTimeout) {
@@ -379,11 +378,9 @@ public class QueryExecDataset implements QueryExec
     }
 
     private class QueryIteratorTimer2 extends QueryIteratorWrapper {
-        private final AtomicBoolean cancelSignal;
 
-        public QueryIteratorTimer2(QueryIterator qIter, AtomicBoolean cancelSignal) {
+        public QueryIteratorTimer2(QueryIterator qIter) {
             super(qIter);
-            this.cancelSignal = cancelSignal;
         }
 
         long yieldCount = 0;
@@ -400,7 +397,7 @@ public class QueryExecDataset implements QueryExec
                 // So nearly not needed.
                 synchronized(lockTimeout)
                 {
-                    TimeoutCallback callback = new TimeoutCallback(cancelSignal);
+                    TimeoutCallback callback = new TimeoutCallback();
                     expectedCallback.set(callback);
                     // Lock against calls of .abort() or of timeout1Callback.
 
@@ -437,10 +434,32 @@ public class QueryExecDataset implements QueryExec
             queryStartTime = System.currentTimeMillis();
     }
 
-    /** Start the query iterator, setting timeouts as needed. */
+    /** Wrapper for starting the query iterator but also dealing with cancellation */
     private void startQueryIterator() {
-        if ( queryIterator != null )
+        synchronized (lockTimeout) {
+            if (cancelSignal.get()) {
+                // Fail before starting the iterator if cancelled already
+                throw new QueryCancelledException();
+            }
+
+            startQueryIteratorActual();
+
+            if (cancelSignal.get()) {
+                queryIterator.cancel();
+
+                // Fail now if cancelled already
+                throw new QueryCancelledException();
+            }
+        }
+    }
+
+    /** Start the query iterator, setting timeouts as needed. */
+    private void startQueryIteratorActual() {
+        if ( queryIterator != null ) {
             Log.warn(this, "Query iterator has already been started");
+            return;
+        }
+
         execInit();
 
         /* Timeouts:
@@ -456,28 +475,14 @@ public class QueryExecDataset implements QueryExec
             return;
         }
 
-        // JENA-2141 - the timeout can go off while building the query iterator structure.
-        // In this case, use a signal passed through the context.
-        // We don't know if getPlan().iterator() does a lot of work or not
-        // (ideally it shouldn't start executing the query but in some sub-systems
-        // it might be necessary)
-        //
-        // This applies to the time to first result because to get the first result, the
-        // queryIterator must have been built. So it does not apply for the second
-        // stage of N,-1 or N,M.
+        TimeoutCallback callback = new TimeoutCallback() ;
+        expectedCallback.set(callback) ;
 
         if ( !isTimeoutSet(timeout1) && isTimeoutSet(timeout2) ) {
             // Case -1,N
-            AtomicBoolean cancelSignal = new AtomicBoolean(false);
-            context.set(ARQConstants.symCancelQuery, cancelSignal);
-            TimeoutCallback callback = new TimeoutCallback(cancelSignal) ;
-            expectedCallback.set(callback) ;
             timeout2Alarm = alarmClock.add(callback, timeout2) ;
             // Start the query.
             queryIterator = getPlan().iterator();
-            // Timeout when off.
-            if ( cancelSignal.get() )
-                queryIterator.cancel();
             // But don't add resetter.
             return ;
         }
@@ -489,23 +494,11 @@ public class QueryExecDataset implements QueryExec
         //   Subcase 2: ! isTimeoutSet(timeout2)
         // Add timeout to first row.
 
-        AtomicBoolean cancelSignal = new AtomicBoolean(false);
-        context.set(ARQConstants.symCancelQuery, cancelSignal);
-
-        TimeoutCallback callback = new TimeoutCallback(cancelSignal) ;
         timeout1Alarm = alarmClock.add(callback, timeout1) ;
-        expectedCallback.set(callback) ;
 
         queryIterator = getPlan().iterator();
         // Add the timeout1->timeout2 resetter wrapper.
-        queryIterator = new QueryIteratorTimer2(queryIterator, cancelSignal);
-
-        // Minor optimization - timeout has already occurred. The first call of hasNext() or next()
-        // will throw QueryCancelledExcetion anyway. This just makes it a bit earlier
-        // in the case when the timeout (timeout1) is so short it's gone off already.
-
-        if ( cancelSignal.get() )
-            queryIterator.cancel();
+        queryIterator = new QueryIteratorTimer2(queryIterator);
     }
 
     private Plan getPlan() {
